--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "hubot": "^2.19.0",
+    "hubot-conversation": "^1.1.1",
     "hubot-diagnostics": "0.0.2",
+    "hubot-geocode": "^0.1.4",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
     "hubot-help": "^0.2.2",
@@ -18,7 +20,8 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.3.4",
+    "hubot-slack": "slackhq/hubot-slack",
+    "needle": "^1.6.0",
     "request": "^2.81.0"
   },
   "engines": {
